--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
     <body>
         <div class="container">
             <div class="jumbotron">
-                <h1>What's Good, Cutie</h1>
-                <p class="lead">Copy your schedule, drop it down below, then sit back and watch the magic happen.</p>
+                <h1>UCR Schedule Mapper</h1>
+                <h3>What's good, cutie</h3>
+                <p class="lead">Copy your schedule, drop it down below, then enjoy your printed schedule and class map.</p>
                 <noscript>
                     <p class="alert alert-error">
-						<strong>Enable JavaScript.</strong> Please? For me? For scotty? For fun?</p>
+						<strong>You'll need to enable JavaScript.</strong> Please? For me? For scotty? For fun?</p>
                 </noscript>
                 <a href="javascript:;" id="upload-btn" class="btn">Submit here babe~</a>
             </div>
                 <p class="alert alert-info">
                 <strong>What is this anyway?</strong> This website is a tool to kiss your frog of a schedule and turn him into a beautiful prince.
                 We will interpret your schdule and give you a calender like view of it and provide links to the buildings where your classes are at.<br><br>
-                <strong>I'd let you smooch me anytime but like, I don't want to give my schedule to a stranger.</strong> Don't worry about it! All processing and
-                thinking is done on your own computer. Nothing is sent to us.
+                <strong>I don't want to give my schedule to a stranger.</strong> Don't worry about it! All processing and
+                thinking is done on your own computer. Nothing is sent to us. Try disconnecting your internet and entering your data. If you're still skeptical, you can see all the source code on our GitHub project located <a href="https://github.com/ammongit/ucr-class-map">here</a>.
 				</p>
                 <nav>
                     <ul>
@@ -37,3 +38,4 @@
         </div>
     </body>
 </html>
+
