--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>UCR Schedule Map</title>
         <link rel="shortcut icon" href="img/ucr-icon.png" type="image/png">
-        <link rel="stylesheet" href="style.css">        
+        <link rel="stylesheet" href="css/style.css">        
+        <script src="js/ucrsv.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     </head>
