Fixed missing quotation mark.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <p class="lead">Copy your schedule, drop it down below,<br> and we'll draw out the schedule and locations</p>
                 <noscript>
                     <p class="alert alert-error">
-						<strong>You'll need to enable JavaScript.</strong> Please? For me? For scotty? For fun?</p>
+						<strong>You'll need to enable JavaScript.</strong> Please? For me? For scotty? For fun?
+                    </p>
                 </noscript>
                 <a href="javascript:;" id="upload-btn" class="btn">Submit it, fam</a>
             </div>
@@ -34,7 +35,7 @@
             
             <nav>
                 <ul>
-                    <li><a href="http://ammongit.github.io/ucr-class-map/>Home</a></li>
+                    <li><a href="http://ammongit.github.io/ucr-class-map/">Home</a></li>
                     <li><a href="https://en.wikipedia.org/wiki/FAQ">FAQ</a></li>
                     <li><a href="http://www.ucr.edu/">UCR</a></li>
                     <li><a href="http://campusmap.ucr.edu/imap/index.html">Map</a></li>
