Same-origin policy, fixed some links, and fixed some late night monkey code

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 <h1>UCR Schedule Visualizer</h1>
                 <nav>
                 <ul>
-                    <li><a href="http://ammongit.github.io/ucr-class-map/">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="http://www.ucr.edu/">UCR</a></li>
                     <li><a href="http://campusmap.ucr.edu/imap/index.html">Map</a></li>
@@ -31,6 +31,7 @@
                     <dd>GitHub: <a href="https://github.com/BradleyCai">https://github.com/BradleyCai</a></dd>
                     <dt><strong>Ammon</strong><dt>
                     <dd>GitHub: <a href="https://github.com/ammongit/">https://github.com/ammongit/</a></dd>
+                    <dd>Email: <a href="mailto:ammon.i.smith@gmail.com">ammon.i.smith@gmail.com</a></dd>
                 </dl>
             </section>
             <section>
