Updated the readme, moved info and added info to the alert, added twitter link, rewrote js check for empty variables

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
+                    <li><a href="https://twitter.com/UCR_Visualizer">Twitter</a></li>
                     <li><a href="http://www.ucr.edu/">UCR</a></li>
                     <li><a href="http://campusmap.ucr.edu/imap/index.html">Map</a></li>
                     <li><a href="https://github.com/ammongit/ucr-class-map">GitHub</a></li>
@@ -45,6 +46,12 @@
                     <li>Website twitter and/or dev blog?</li>
                     <li>Code efficency and elegancy</li>
                 </ul>
+            </section>
+            <section>
+                <h1>Privacy Policy</h1>
+                <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. You can even try disconnecting 
+                your internet and entering your data. If you're still skeptical, you can see all the source code on our GitHub which you can find on the toolbar
+                at the top of the page.</p>
             </section>
         </div>
     </body>
