--- a/index.html
+++ b/index.html
@@ -49,15 +49,16 @@
             <p class="alert alert-info">
                 <strong>What is this anyway?</strong> This website is a tool to kiss your frog of a schedule and turn him into a beautiful prince.
                 We'll interpret your schdule and give you an hour by hour view as well as provide links to the buildings where your classes are at.<br><br>
-                <strong>I don't want to give my schedule to some stranger though...</strong> Don't worry about it! All processing and
-                thinking is done on your own computer. Nothing is sent to us. Try disconnecting your internet and entering 
-                your data. If you're still skeptical, you can see all the source code on our GitHub which you can find at the bottom of the page.
+                <strong>Something isn't working!</strong> Yeah we <i>just</i> pumped out our working version not too long ago. We're still working on this
+                project everyday! <strong><a href="https://twitter.com/UCR_Visualizer">Tweet</a> problems at us or send us detailed emails</strong> about what went wrong!<br><br> 
+                <strong>Let me stalk you cutie.</strong> O-Okay. The about link below has more info about us and the website.
             </p>
             
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
+                    <li><a href="https://twitter.com/UCR_Visualizer">Twitter</a></li>
                     <li><a href="http://www.ucr.edu/">UCR</a></li>
                     <li><a href="http://campusmap.ucr.edu/imap/index.html">Map</a></li>
                     <li><a href="https://github.com/ammongit/ucr-class-map">GitHub</a></li>
