--- a/about.html
+++ b/about.html
@@ -30,13 +30,14 @@
                     <dt><strong>Bradley Cai</strong><dt>
                     <dd>Email: <a href="mailto:bradleycai24@gmail.com">bradleycai24@gmail.com</a></dd>
                     <dd>GitHub: <a href="https://github.com/BradleyCai">https://github.com/BradleyCai</a></dd>
-                    <dt><strong>Ammon</strong><dt>
-                    <dd>GitHub: <a href="https://github.com/ammongit/">https://github.com/ammongit/</a></dd>
+                    <dt><strong>Ammon Smith</strong><dt>
                     <dd>Email: <a href="mailto:ammon.i.smith@gmail.com">ammon.i.smith@gmail.com</a></dd>
+                    <dd>GitHub: <a href="https://github.com/ammongit/">https://github.com/ammongit/</a></dd>
+                    <dd>Public Key: <a href="etc/ammongpg.pub">2C3CF0C7</a></dd>
                 </dl>
             </section>
             <section>
-                <h1>Upcomming features</h1>
+                <h1>Upcoming features</h1>
                 <ul>
                     <li>Prettier calender design + general design improvements</li>
                     <li>Save calender to an image or print calender out</li>
@@ -48,10 +49,14 @@
                 </ul>
             </section>
             <section>
+                <h1>Found an bug? Want a feature?</h1>
+                <p>Submit an <a href="https://github.com/BradleyCai/ucr-class-map/issues/new">issue</a> so we can fix it!</p>
+                <p>If you're a developer, feel free to <a href="https://github.com/BradleyCai/ucr-class-map">fork</a> us and submit a <a href="https://github.com/BradleyCai/ucr-class-map/pulls">pull request</a> to contribute code to this project. Yay free software!</p>
+            </section>
+            <section>
                 <h1>Privacy Policy</h1>
-                <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. You can even try disconnecting 
-                your internet and entering your data. If you're still skeptical, you can see all the source code on our GitHub which you can find on the toolbar
-                at the top of the page.</p>
+                <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. At all. We have no interest in selling your personal data to advertisers. You can even try disconnecting 
+                your internet and entering your data. If you're still skeptical, you can see all the source code on our <a href="https://github.com/BradleyCai/ucr-class-map">GitHub</a>.</p>
             </section>
         </div>
     </body>
