Added schedule canvas prototype

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         
         <div class="centered">
             <div class="table-space" id="table-space"></div>
+            <canvas id="canvas-img"></canvas>
         </div>
         
         <div class="container">
