Fixed some wording on the readme and removed the redundant line in the alert in the main page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                 <strong>What is this anyway?</strong> This website is a tool to kiss your frog of a schedule and turn him into a beautiful prince.
                 We'll interpret your schdule and give you an hour by hour view as well as provide links to the buildings where your classes are at.<br><br>
                 <strong>Something isn't working!</strong> Yeah we <i>just</i> pumped out our working version not too long ago. We're still working on this
-                project everyday! <strong><a href="https://twitter.com/UCR_Visualizer">Tweet</a> problems at us or send us detailed emails</strong> about what went wrong!<br><br> 
-                <strong>Let me stalk you cutie.</strong> O-Okay. The about link below has more info about us and the website.
+                project everyday! <strong><a href="https://twitter.com/UCR_Visualizer">Tweet</a> problems at us or send us detailed emails</strong> about what went wrong! 
             </p>
             
             <nav>
