Fixed readme formatting

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 						<strong>You'll need to enable JavaScript.</strong> Please? For me? For scotty? For fun?
                     </p>
                 </noscript>
+                <ul>
+  <li>Lots of inspiration from <a href="https://github.com/nokonoko/Pomf">pomf</a></li>
+  <li><a href="https://jquery.com/">jQuery</a></li>
+  <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
+  <li><a href="https://github.com/eligrey/FileSaver.js/">FileSaver.js</a></li>
+  <li><a href="https://github.com/eligrey/canvas-toBlob.js">Canvas-toBlob.js</a></li>
+  <li><a href="https://github.com/eligrey/Blob.js">Blob.js</a></li>
+</ul>
             </div>    
         </div>
         
