Added my public key, added to the button, and fixed a link in the readme

--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
                     <dt><strong>Bradley Cai</strong><dt>
                     <dd>Email: <a href="mailto:bradleycai24@gmail.com">bradleycai24@gmail.com</a></dd>
                     <dd>GitHub: <a href="https://github.com/BradleyCai">https://github.com/BradleyCai</a></dd>
+                    <dd>Public Key: <a href="etc/bradleypublickey.asc">1BC8E4BE</a></dd>
                     <dt><strong>Ammon Smith</strong><dt>
                     <dd>Email: <a href="mailto:ammon.i.smith@gmail.com">ammon.i.smith@gmail.com</a></dd>
                     <dd>GitHub: <a href="https://github.com/ammongit/">https://github.com/ammongit/</a></dd>
