--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <div class="centered">
             <div class="table-space" id="table-space"></div>
-            <button class = "btn">Click to download</button>
+            <button class = "btn">Click to download schedule</button>
         </div>
         
         <div class="container">
