Changed GitHub link to be consistent.

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                     <dd>Public Key: <a href="etc/bradleypublickey.asc">1BC8E4BE</a></dd>
                     <dt><strong>Ammon Smith</strong><dt>
                     <dd>Email: <a href="mailto:ammon.i.smith@gmail.com">ammon.i.smith@gmail.com</a></dd>
-                    <dd>GitHub: <a href="https://github.com/ammongit/">https://github.com/ammongit/</a></dd>
+                    <dd>GitHub: <a href="https://github.com/ammongit/">https://github.com/ammongit</a></dd>
                     <dd>Public Key: <a href="etc/ammongpg.pub">2C3CF0C7</a></dd>
                 </dl>
             </section>
