Reformatted into objects, added ability to input schedule to create courseList, fixed spacing on the button placement, and fixed canvas visual bug

--- a/about.html
+++ b/about.html
@@ -40,13 +40,13 @@
             <section>
                 <h1>Upcoming features</h1>
                 <ul>
-                    <li>Prettier calender design + general design improvements</li>
-                    <li>Save calender to an image or print calender out</li>
+                    <li>Add the location of the buildings for each course</li>
                     <li>Google Calender Integration</li>
-                    <li>Same page map</li>
+                    <li>Better phone support</li>
+                    <li>Prettier calender design + general design improvements</li>
+                    <li>Location results within the page</li>
                     <li>Time estimates of getting to class</li>
-                    <li>Website twitter and/or dev blog?</li>
-                    <li>Code efficency and elegancy</li>
+                    <li>Better code efficency, modularity, documentation, and elegancy</li>
                 </ul>
             </section>
             <section>
@@ -57,7 +57,8 @@
             <section>
                 <h1>Privacy Policy</h1>
                 <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. At all. We have no interest in selling your personal data to advertisers. You can even try disconnecting 
-                your internet and entering your data. If you're still skeptical, you can see all the source code on our <a href="https://github.com/BradleyCai/ucr-class-map">GitHub</a>.</p>
+                your internet and entering your data. If you're still skeptical, you can see all the source code on our <a href="https://github.com/BradleyCai/ucr-class-map">GitHub</a>.<br><br>If we ever change this privacy
+                policy we will announce it on our twitter or in the alert section on the main page. <br><strong>(Last updated: October 29, 2015)</p>
             </section>
         </div>
     </body>
