Fixed a lot of bugs and styled the website a little

--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>UCR Schedule Visualizer</title>
         <link rel="shortcut icon" href="img/ucr-icon.png" type="image/png">
-        <link rel="stylesheet" href="css/style.css">        
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/bs-popover.css">
     </head>
-	
+
 	<body>
 		<div class="container">
             <div class="jumbotron">
@@ -25,6 +25,13 @@
             </nav>
             </div>
             <section>
+                <h1>What is UCR Schedule Visualizer?</h1>
+                <p>
+                    This website is a tool to kiss your frog of a schedule and turn him into a beautiful prince.
+                    We'll interpret your schdule and give you an hour by hour view as well as provide links to the buildings where your classes are.
+                </p>
+            </section>
+            <section>
                 <h1>Contact Information</h1>
                 <dl>
                     <dt><strong>Bradley Cai</strong><dt>
@@ -40,7 +47,6 @@
             <section>
                 <h1>Upcoming features</h1>
                 <ul>
-                    <li>Add the location of the buildings for each course</li>
                     <li>Google Calender Integration</li>
                     <li>Better phone support</li>
                     <li>Prettier calender design + general design improvements</li>
@@ -56,7 +62,7 @@
             </section>
             <section>
                 <h1>Privacy Policy</h1>
-                <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. At all. We have no interest in selling your personal data to advertisers. You can even try disconnecting 
+                <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. At all. We have no interest in selling your personal data to advertisers. You can even try disconnecting
                 your internet and entering your data. If you're still skeptical, you can see all the source code on our <a href="https://github.com/BradleyCai/ucr-class-map">GitHub</a>.<br><br>If we ever change this privacy
                 policy we will announce it on our twitter or in the alert section on the main page. <br><strong>(Last updated: October 29, 2015)</p>
             </section>
