Fixed mobile alert background, renamed textarea placeholder, and refactored part of tableString

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="centered">
-            <textarea type="text" id="regex" autofocus=true placeholder="Give it to me baby~"></textarea>
+            <textarea type="text" id="regex" autofocus=true placeholder="Paste it here~"></textarea>
             <div class="table-space" id="table-space"></div>
         </div>
 
