Loading building names is now from a text file rather than hardcoded. Only took 3 deletes and miscommunication =D

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/bs-popover.css">
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
-        <script type="text/javascript" src="js/Blob.js"></script>
+        <script type="text/javascript/ucr-schedule-visualizer/" src="js/Blob.js"></script>
         <script type="text/javascript" src="js/canvas-toBlob.js"></script>
         <script type="text/javascript" src="js/FileSaver.js"></script>
         <script type="text/javascript" src="js/Course.js"></script>
