Misspelled my public key file.

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                     <dt><strong>Ammon Smith</strong><dt>
                     <dd>Email: <a href="mailto:ammon.i.smith@gmail.com">ammon.i.smith@gmail.com</a></dd>
                     <dd>GitHub: <a href="https://github.com/ammongit/">https://github.com/ammongit</a></dd>
-                    <dd>Public Key: <a href="etc/ammongpublickey.asc">2C3CF0C7</a></dd>
+                    <dd>Public Key: <a href="etc/ammonpublickey.asc">2C3CF0C7</a></dd>
                 </dl>
             </section>
             <section>
