Centering noscript text.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <p class="lead">Copy your <a target="_blank" href="https://growl.ucr.edu">schedule</a> and drop it down below.<br>We'll draw out the hour by hour view and locations.</p>
                 <noscript>
                     <p class="alert alert-error">
+                    <center>
                     <strong>This site requires JavaScript.</strong> Please? For me? For fun? For <a href="https://www.gnu.org/philosophy/javascript-trap.en.html">rms</a>?
+                    </center>
                     </p>
                 </noscript>
             </div>
