--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script type="text/javascript" src="js/UcrBuildings.js"></script>
         <script type="text/javascript" src="js/CourseParser.js"></script>
         <script type="text/javascript" src="js/Schedule.js"></script>
-        <script defer type="text/javascript" src="js/main.js"></script>
+        <script defer type="text/javascript" src="js/Main.js"></script>
     </head>
 
     <body>
