Anchors now properly redirect.

--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
 	<body>
 		<div class="container">
             <div class="jumbotron">
-                <a name="top" />
                 <h1>UCR Schedule Visualizer</h1>
                 <nav>
                 <ul>
@@ -33,7 +32,7 @@
                 </p>
             </section>
             <section>
-                <a name="contact" />
+                <a name="contact"></a>
                 <h1>Contact Information</h1>
                 <dl>
                     <dt><strong>Bradley Cai</strong><dt>
@@ -47,7 +46,7 @@
                 </dl>
             </section>
             <section>
-                <a name="upcoming" />
+                <a name="upcoming"></a>
                 <h1>Upcoming features</h1>
                 <ul>
                     <li>Google Calender Integration</li>
@@ -59,13 +58,13 @@
                 </ul>
             </section>
             <section>
-                <a name="bugs" />
+                <a name="bugs"></a>
                 <h1>Found an bug? Want a feature?</h1>
                 <p>Submit an <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/issues/new">issue</a> so we can fix it!</p>
                 <p>If you're a developer, feel free to <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/">fork</a> us and submit a <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/pulls">pull request</a> to contribute code to this project. Yay free software!</p>
             </section>
             <section>
-                <a name="privacy" />
+                <a name="privacy"></a>
                 <h1>Privacy Policy</h1>
                 <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. At all. We have no interest in selling your personal data to advertisers. You can even try disconnecting
                 your internet and entering your data. If you're still skeptical, you can see all the source code on our <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/">GitHub</a>.<br><br>If we ever change this privacy
