Added clarity to the alert box for those who are on untested browsers

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <p class="alert alert-info">
                 <strong>Something isn't working!</strong> Yeah we <i>just</i> pumped out our working version not too long ago. We're still working on this
-                project everyday! <strong><a href="https://twitter.com/UCR_Visualizer">Tweet</a> or email us</strong> about what went wrong!
+                project everyday! <strong><a href="https://twitter.com/UCR_Visualizer">Tweet</a> or email us</strong> about what went wrong!<br><br> UCRSV is tested on Windows and Gnu/Linux using Chrome and Firefox. If you have a different browser or OS you might run into some issues until we fix them.
             </p>
 
             <nav>
