Fixed a couple of bugs

--- a/about.html
+++ b/about.html
@@ -35,11 +35,11 @@
                 <a name="contact"></a>
                 <h1>Contact Information</h1>
                 <dl>
-                    <dt><strong>Bradley Cai</strong><dt>
+                    <dt><strong>Bradley Cai</strong></dt>
                     <dd>Email: <a href="mailto:bradleycai24@gmail.com">bradleycai24@gmail.com</a></dd>
                     <dd>GitHub: <a href="https://github.com/BradleyCai">https://github.com/BradleyCai</a></dd>
                     <dd>Public Key: <a href="etc/bradleypublickey.asc">1BC8E4BE</a></dd>
-                    <dt><strong>Ammon Smith</strong><dt>
+                    <dt><strong>Ammon Smith</strong></dt>
                     <dd>Email: <a href="mailto:ammon.i.smith@gmail.com">ammon.i.smith@gmail.com</a></dd>
                     <dd>GitHub: <a href="https://github.com/ammongit/">https://github.com/ammongit</a></dd>
                     <dd>Public Key: <a href="etc/ammonpublickey.asc">2C3CF0C7</a></dd>
@@ -68,7 +68,7 @@
                 <h1>Privacy Policy</h1>
                 <p>All processing and thinking is done on your own computer. Nothing schedule related is sent to us. At all. We have no interest in selling your personal data to advertisers. You can even try disconnecting
                 your internet and entering your data. If you're still skeptical, you can see all the source code on our <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/">GitHub</a>.<br><br>If we ever change this privacy
-                policy we will announce it on our twitter or in the alert section on the main page. <br><strong>(Last updated: October 29, 2015)</p>
+                policy we will announce it on our twitter or in the alert section on the main page. <br><strong>(Last updated: October 29, 2015)</strong></p>
             </section>
         </div>
     </body>
