Fixed browser disparity, and some bugs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>UCR Schedule Visualizer</title>
         <link rel="shortcut icon" href="img/ucr-icon.png" type="image/png">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/bs-popover.css">
         <script type="text/javascript" src="js/jquery.min.js"></script>
