Updated about page, and added new schedules to test with

--- a/about.html
+++ b/about.html
@@ -47,21 +47,24 @@
             </section>
             <section>
                 <a name="upcoming"></a>
+                <h1>Special Thanks</h1>
+                <p>Special thanks to <a href="https://github.com/FuzzyAvacado">John</a>, the people at hack night, and any contributers!</p>
+            </section>
+            <section>
+                <a name="upcoming"></a>
                 <h1>Upcoming features</h1>
                 <ul>
                     <li>Google Calender Integration</li>
+                    <li>Ability to manually add a course</li>
                     <li>Better phone support</li>
                     <li>Prettier calender design + general design improvements</li>
-                    <li>Location results within the page</li>
-                    <li>Time estimates of getting to class</li>
                     <li>Better code efficency, modularity, documentation, and elegancy</li>
                 </ul>
             </section>
             <section>
                 <a name="bugs"></a>
                 <h1>Found an bug? Want a feature?</h1>
-                <p>Submit an <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/issues/new">issue</a> so we can fix it!</p>
-                <p>If you're a developer, feel free to <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/">fork</a> us and submit a <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/pulls">pull request</a> to contribute code to this project. Yay free software!</p>
+                <p>Submit an <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/issues/new">issue</a> so we can fix it! <br><br>If you're a developer, feel free to <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/">fork</a> us and submit a <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/pulls">pull request</a> to contribute code to this project. Yay free software!</p>
             </section>
             <section>
                 <a name="privacy"></a>
