--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script type="text/javascript" src="js/UcrBuildings.js"></script>
         <script type="text/javascript" src="js/CourseParser.js"></script>
         <script type="text/javascript" src="js/Schedule.js"></script>
+        <script type="text/javascript" src="js/snowstorm.js"></script>
         <script defer type="text/javascript" src="js/Main.js"></script>
     </head>
 
