Updated information and removed the snow

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             <section>
                 <a name="upcoming"></a>
                 <h1>Special Thanks</h1>
-                <p>Special thanks to <a href="https://github.com/FuzzyAvacado">John</a>, the people at hack night, and any contributers!</p>
+                <p>Special thanks to <a href="https://github.com/FuzzyAvacado">John</a>, the people at hack night, and any contributors!</p>
             </section>
             <section>
                 <a name="upcoming"></a>
