--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <script type="text/javascript" src="js/UcrBuildings.js"></script>
         <script type="text/javascript" src="js/CourseParser.js"></script>
         <script type="text/javascript" src="js/Schedule.js"></script>
-        <script type="text/javascript" src="js/snowstorm.js"></script>
         <script defer type="text/javascript" src="js/Main.js"></script>
     </head>
 
@@ -43,8 +42,7 @@
 
         <div class="container">
             <p class="alert alert-info">
-                <strong>Something isn't working!</strong> Yeah we <i>just</i> pumped out our working version not too long ago. We're still working on this
-                project everyday! <strong><a href="https://twitter.com/UCR_Visualizer">Tweet</a> or email us</strong> about what went wrong!<br><br> UCRSV is tested on Windows and GNU/Linux using Chrome and Firefox. If you have a different browser or OS you might run into some issues until we fix them.
+                <strong>Something isn't working!</strong> Yeah, UCRSV is still early in development. <a href="about.html">Email us</a> or <a href="https://github.com/BradleyCai/ucr-schedule-visualizer/issues/new">submit an issue</a> about what went wrong!<br><br> UCRSV is tested on Windows and GNU/Linux using Chrome and Firefox. If you're using a different browser or OS you might run into some issues until we fix them.
             </p>
 
             <nav>
